<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    android:padding="24dp">

    <!-- Tiêu đề -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="#666666"
            android:background="@android:color/transparent"  />
    </LinearLayout>

    <!-- Form nhập liệu -->
    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_below="@id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:maxWidth="488dp"
        android:background="@android:color/transparent" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password1"
            android:background="@android:color/transparent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password2"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            layout="@layout/common_button"
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in_button"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_sign_in"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"  />
    </LinearLayout>

</RelativeLayout>